Added Bin2BinTransfer to be merged on InforWebServicesPT

--- a/pom.xml
+++ b/pom.xml
@@ -549,6 +549,7 @@
                 <sourceFile>${project.build.directory}/generated-sources/wsimport/net/datastream/wsdls/mp6044_syncextmenus_001/SyncExtMenusPT.java</sourceFile>
                 <sourceFile>${project.build.directory}/generated-sources/wsimport/net/datastream/wsdls/mp6045_deleteextmenus_001/DeleteExtMenusPT.java</sourceFile>
                 <sourceFile>${project.build.directory}/generated-sources/wsimport/net/datastream/wsdls/mp6215_syncextmenushierarchy_001/SyncExtMenusHierarchyPT.java</sourceFile>
+                <sourceFile>${project.build.directory}/generated-sources/wsimport/net/datastream/wsdls/mp0286_bin2bintransfer_001/Bin2BinTransferPT.java</sourceFile>
               </sourceFiles>
               <destinationPackage>net.datastream.wsdls.inforws</destinationPackage>
               <classAnnotations>
