--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
   <groupId>ch.cern.eam</groupId>
   <artifactId>eam-wshub-proxyclient</artifactId>
   <packaging>jar</packaging>
-  <version>11.5-0-SNAPSHOT</version>
+  <version>11.5-0</version>
 
   <name>EAM WS Hub Proxy Client</name>
   <description>JAX-WS aisws aisws generated from Infor EAM Web Services Toolkit WSDLs.</description>
@@ -31,7 +31,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
-    <infor.version>11.4</infor.version>
+    <infor.version>11.5</infor.version>
     <infor.wsdls>/Users/lpater/Documents/Infor/web_services_115/Wsdl</infor.wsdls>
   </properties>
 
@@ -91,7 +91,7 @@
 
   <scm>
     <connection>scm:git:ssh://git@github.com/cern-eam/eam-wshub-proxyclient.git</connection>
-    <tag>eam-wshub-proxyclient-11.4-4</tag>
+    <tag>eam-wshub-proxyclient-11.5-0</tag>
     <url>https://github.com/cern-eam/eam-wshub-proxyclient</url>
   </scm>
 
