Added safety CRUD webservices

--- a/pom.xml
+++ b/pom.xml
@@ -356,6 +356,12 @@
                 <wsdlUrl>${infor.wsdls}/Material/MP1220_GetInventoryTransaction_001.wsdl</wsdlUrl>
                 <wsdlUrl>${infor.wsdls}/Material/MP1219_GetInventoryTransactionDefault_001.wsdl</wsdlUrl>
                 <wsdlUrl>${infor.wsdls}/Material/MP1221_RefreshInventoryTransaction_001.wsdl</wsdlUrl>
+                <wsdlUrl>${infor.wsdls}/Work/MP3222_GetEntitySafety_001.wsdl</wsdlUrl>
+                <wsdlUrl>${infor.wsdls}/Work/MP3221_DeleteEntitySafety_001.wsdl</wsdlUrl>
+                <wsdlUrl>${infor.wsdls}/Work/MP3220_SyncEntitySafety_001.wsdl</wsdlUrl>
+                <wsdlUrl>${infor.wsdls}/Work/MP3219_AddEntitySafety_001.wsdl</wsdlUrl>
+                <wsdlUrl>${infor.wsdls}/Work/MP3218_GetEntitySafetyDefault_001.wsdl</wsdlUrl>
+
               </wsdlUrls>
             </configuration>
           </execution>
@@ -570,6 +576,12 @@
                 <sourceFile>${project.build.directory}/generated-sources/wsimport/net/datastream/wsdls/mp1220_getinventorytransaction_001/GetInventoryTransactionPT.java</sourceFile>
                 <sourceFile>${project.build.directory}/generated-sources/wsimport/net/datastream/wsdls/mp1219_getinventorytransactiondefault_001/GetInventoryTransactionDefaultPT.java</sourceFile>
                 <sourceFile>${project.build.directory}/generated-sources/wsimport/net/datastream/wsdls/mp1221_refreshinventorytransaction_001/RefreshInventoryTransactionPT.java</sourceFile>
+                <sourceFile>${project.build.directory}/generated-sources/wsimport/net/datastream/wsdls/mp3222_getentitysafety_001/GetEntitySafetyPT.java</sourceFile>
+                <sourceFile>${project.build.directory}/generated-sources/wsimport/net/datastream/wsdls/MP3221_deleteentitysafety_001/DeleteEntitySafetyPT.java</sourceFile>
+                <sourceFile>${project.build.directory}/generated-sources/wsimport/net/datastream/wsdls/MP3220_syncentitysafety_001/SyncEntitySafetyPT.java</sourceFile>
+                <sourceFile>${project.build.directory}/generated-sources/wsimport/net/datastream/wsdls/MP3219_addentitysafety_001/AddEntitySafetyPT.java</sourceFile>
+                <sourceFile>${project.build.directory}/generated-sources/wsimport/net/datastream/wsdls/MP3218_getentitysafetydefault_001/GetEntitySafetyDefaultPT.java</sourceFile>
+
               </sourceFiles>
               <destinationPackage>net.datastream.wsdls.inforws</destinationPackage>
               <classAnnotations>
